--- a/templates/new-claim.html
+++ b/templates/new-claim.html
@@ -4,24 +4,175 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <style>
+      .nav-tag {
+        color: #ffffff;
+      }
+      .nav-tag:hover {
+        color: #111820;
+      }
+
+      .nav {
+        background-color: #0076be;
+      }
+      .nav-account {
+        color: #ffffff;
+        width: 20px;
+      }
+      .nav-account:hover {
+        color: #111820;
+      }
+
+      .all-heading {
+        margin-left: 15px;
+        margin-top: 20px;
+      }
+      .claim-input {
+        width: 300px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+      }
+      .claim-description-input {
+        height: 100px;
+      }
+      .form-container {
+        margin: 20px;
+        max-width: 1000px;
+      }
+      .quote-form-container {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .claim-form-input-items {
+        width: 80%;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+      .form-top-label {
+        margin-top: 20px;
+      }
+      .form-button {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        background-color: #333e48;
+        color: #ffffff;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+
+        width: 300px;
+      }
+      .form-button:hover {
+        background-color: #0076be;
+        color: #ffffff;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
+      @media (min-width: 515px) {
+        .claim-input {
+          width: 440px;
+        }
+      }
+      @media (min-width: 768px) {
+        .quote-form-container {
+          width: 90%;
+        }
+        .claim-form-input-items {
+          width: 50%;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+      @media (min-width: 1024px) {
+        .quote-form-container {
+          width: 70%;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>New Claim</h1>
-    <form action="" method="POST">
-      <div>
-        <p>Select Policy number:</p>
-        <select name="policy_number">
-          {% for policy, classic_cars in polices%}
-          <option value="{{policy.policy_number}}">
-            {{policy.policy_number}} | {{classic_cars.vehicle_make}}
-          </option>
-          {% endfor %}
-        </select>
+    <nav class="navbar navbar-expand-lg nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Platinum Plus</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link nav-tag" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-tag" href="/dashboard">Dashboard</a>
+            </li>
+          </ul>
+
+          <a class="nav-account" href="/account">
+            <i class="fa-solid fa-circle-user fa-xl"></i>
+          </a>
+        </div>
       </div>
-      {{ form.hidden_tag() }} {{form.date_incident_occurred.label}}
-      {{form.date_incident_occurred()}} {{form.claim_description.label}}
-      {{form.claim_description()}} {{form.police_claim_number.label}}
-      {{form.police_claim_number()}} {{form.submit()}}
-    </form>
+    </nav>
+
+    <div class="quote-form-container">
+      <h1 class="all-heading">New Claim</h1>
+      <form class="card form-container" action="" method="POST">
+        <div class="claim-form-input-items">
+          <div class="form-group">
+            <label class="form-top-label">Select Policy number:</label><br />
+            <select class="claim-input" name="policy_number">
+              {% for policy, classic_cars in polices%}
+              <option value="{{policy.policy_number}}">
+                {{policy.policy_number}} | {{classic_cars.vehicle_make}}
+              </option>
+              {% endfor %}
+            </select>
+          </div>
+          {{ form.hidden_tag() }}
+          <div class="form-group">
+            {{form.date_incident_occurred.label()}}
+            <br />
+            {{form.date_incident_occurred(class='claim-input')}}
+          </div>
+          <div class="form-group">
+            {{form.claim_description.label}} <br />
+            {{form.claim_description(class='claim-input
+            claim-description-input')}}
+          </div>
+          <div>
+            {{form.police_claim_number.label}}<br />
+            {{form.police_claim_number(class='claim-input')}}
+          </div>
+          {{form.submit(class="btn form-button")}}
+        </div>
+      </form>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
