--- a/templates/base.html
+++ b/templates/base.html
@@ -11,120 +11,139 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <style>
       body {
         margin: 0;
         font-family: Arial, sans-serif;
       }
-      .nav-bar {
-        background-color: #0076be;
-        color: #fff;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      .nav-items {
-        display: none;
-        list-style: none;
+      .logo {
+        max-width: 100px;
+        max-height: 40px;
       }
       .nav-tag {
-        text-decoration: none;
         color: #ffffff;
       }
       .nav-tag:hover {
         color: #111820;
       }
-      input[type='checkbox'] {
-        display: none;
+
+      .nav {
+        background-color: #0076be;
       }
-      #nav-checked:checked ~ .nav-items {
-        display: block;
+      .nav-account,
+      .nav-right-item {
+        margin-left: 10px;
+        margin-right: 10px;
+        color: #ffffff;
       }
-      .nav-items-1 {
-        display: none;
-      }
-      .active {
+      .nav-account:hover {
         color: #111820;
       }
-      .button {
-        background: #333e48;
-      }
-
-      .logo {
-        max-width: 100px;
-        max-height: 40px;
-      }
-      @media (min-width: 786px) {
-        .ham {
-          display: none;
-        }
-        .nav-items-1 {
-          list-style: none;
-          padding: 0;
-          margin: 0;
-          display: flex;
-        }
-        .nav-tag {
-          padding: 20px;
-        }
-      }
     </style>
+    {% block style %} {% endblock %}
   </head>
   <body>
-    <nav class="nav-bar">
-      <label class="ham">
-        <input type="checkbox" id="nav-checked" /><i
-          id="hamburger"
-          class="fa-solid fa-bars"
-        ></i>
+    <nav class="navbar navbar-expand-lg nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Platinum Plus</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link nav-tag" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link nav-tag"
+                href="/dashboard"
+                {%
+                if
+                not
+                user
+                %}
+                hidden{%
+                endif
+                %}
+                >Dashboard</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-tag" aria-current="page" href="/about"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-tag" aria-current="page" href="/contact"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
 
-        <ul class="nav-items">
-          <li><a href="/" class="nav-tag">Home</a></li>
-          <li><a href="/about" class="nav-tag">About</a></li>
-          <li>
-            <a href="/contact" class="nav-tag">Contact</a>
-          </li>
-        </ul>
-      </label>
-      <img
-        class="logo"
-        src="../static/platinum-high-resolution-logo-transparent.svg"
-        alt=""
-      />
-      <ul class="nav-items-1">
-        <li>
           <a
-            href="/"
-            class="nav-tag {% if curr_page == 'home'%}active{% endif %}"
-            >Home</a
+            class="nav-account"
+            href="/account"
+            {%
+            if
+            not
+            user
+            %}
+            hidden{%
+            endif
+            %}
           >
-        </li>
-        <li>
+            <i class="fa-solid fa-circle-user fa-xl"></i>
+          </a>
           <a
-            href="/about"
-            class="nav-tag {% if curr_page == 'about'%}active{% endif %}"
-            >About</a
+            class="btn btn-success my-2 my-sm-0 nav-right-item"
+            href="/register"
+            {%
+            if
+            user
+            %}
+            hidden{%
+            endif
+            %}
           >
-        </li>
-        <li>
+            Register
+          </a>
           <a
-            href="/contact"
-            class="nav-tag {% if curr_page == 'contact'%}active{% endif %}"
-            >Contact</a
+            class="btn btn-success my-2 my-sm-0 nav-right-item"
+            href="/login"
+            {%
+            if
+            user
+            %}
+            hidden{%
+            endif
+            %}
           >
-        </li>
-      </ul>
-      <div>
-        <button class="button">
-          <a class="nav-tag" href="/registration">Register</a>
-        </button>
-        <button class="button">
-          <a class="nav-tag" href="/login">Login</a>
-        </button>
+            Login
+          </a>
+        </div>
       </div>
     </nav>
-
     {% block body %} {% endblock %}
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
