--- a/templates/all-polices.html
+++ b/templates/all-polices.html
@@ -1,174 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <style>
-      .nav-tag {
-        color: #ffffff;
-      }
-      .nav-tag:hover {
-        color: #111820;
-      }
+{% extends 'base.html' %} {% block style %}
+<style>
+  .all-category-heading {
+    margin-left: 15px;
+  }
 
-      .nav {
-        background-color: #0076be;
-      }
-      .nav-account {
-        color: #ffffff;
-        width: 20px;
-      }
-      .nav-account:hover {
-        color: #111820;
-      }
+  .all-heading {
+    margin-left: 15px;
+    margin-top: 20px;
+  }
 
-      .flash-container {
-        font-family: sans-serif;
-        z-index: 1; /* set higher z-index value */
-        position: relative; /* position must be set for z-index to work */
-      }
-      .flashes {
-        display: flex;
-        justify-content: space-around;
-        background-color: orange;
-        max-width: 200px;
-        border-radius: 3%;
-        margin: 5px;
-        padding: 5px;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        animation: notification 0s ease-in 3s forwards;
-      }
-      .polices-container {
-        z-index: 0; /* set higher z-index value */
-        position: relative;
-      }
+  .all-items-container {
+    padding: 10px;
+    margin: 17px;
+  }
+  .policy-container {
+    background-color: #333e48;
+    color: #ffffff;
+  }
+  .all-button-active {
+    max-width: 150px;
+    background-color: #111820;
+    color: #ffffff;
+  }
+  .all-button {
+    max-width: 150px;
+    background-color: #333e48;
+    color: #ffffff;
+  }
+  .all-button:hover,
+  .all-button-active:hover {
+    background-color: #0076be;
+    color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+</style>
+{% endblock %} {% block body%}
 
-      @keyframes notification {
-        to {
-          display: none;
-          width: 0;
-          height: 0;
-          overflow: hidden;
-        }
-      }
-
-      .all-category-heading {
-        margin-left: 15px;
-      }
-
-      .all-heading {
-        margin-left: 15px;
-        margin-top: 20px;
-      }
-
-      .all-items-container {
-        padding: 10px;
-        margin: 17px;
-      }
-      .policy-container {
-        background-color: #333e48;
-        color: #ffffff;
-      }
-      .all-button-active {
-        max-width: 150px;
-        background-color: #111820;
-        color: #ffffff;
-      }
-      .all-button {
-        max-width: 150px;
-        background-color: #333e48;
-        color: #ffffff;
-      }
-      .all-button:hover,
-      .all-button-active:hover {
-        background-color: #0076be;
-        color: #ffffff;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      }
-    </style>
-  </head>
-
-  <body>
-    <nav class="navbar navbar-expand-lg nav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Platinum Plus</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link nav-tag" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link nav-tag" href="/dashboard">Dashboard</a>
-            </li>
-          </ul>
-
-          <a class="nav-account" href="/account">
-            <i class="fa-solid fa-circle-user fa-xl"></i>
-          </a>
-        </div>
-      </div>
-    </nav>
-
-    <div class="flash-container">
-      {% with messages = get_flashed_messages() %} {% if messages %} {% for
-      message in messages %}
-      <div class="flashes">
-        <p>{{ message }}</p>
-        <p class="flask-x">x</p>
-      </div>
-      {% endfor %} {% endif %} {% endwith %}
-    </div>
-    <!-- Actual policy code -->
-    <div class="polices-container">
-      <h2 class="all-heading">All Policies</h2>
-      <h3 class="all-category-heading">Classic Cars:</h3>
-      {% for policy,classic_car in all_policies_data.classic_car %}
-      <div
-        class="card all-items-container {% if not policy.active %}policy-container{% endif %}"
-      >
-        <h5>Policy No: {{policy.policy_number}}</h5>
-        <p>Vehicle:</p>
-        <p>Make: {{classic_car.vehicle_make}}</p>
-        <p>Model: {{classic_car.model}}</p>
-        <p>Premium: R{{policy.monthly_premium}} p/m</p>
-        <a
-          class="btn {% if not policy.active %}all-button-active{% else %}all-button{% endif %}"
-          href="/all-policies/{{policy.policy_number}}"
-          >View More</a
-        >
-      </div>
-      {% endfor %}
-    </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<!-- Actual policy code -->
+<div class="polices-container">
+  <h2 class="all-heading">All Policies</h2>
+  <h3 class="all-category-heading">Classic Cars:</h3>
+  {% for policy,classic_car in all_policies_data.classic_car %}
+  <div
+    class="card all-items-container {% if not policy.active %}policy-container{% endif %}"
+  >
+    <h5>Policy No: {{policy.policy_number}}</h5>
+    <p>Vehicle:</p>
+    <p>Make: {{classic_car.vehicle_make}}</p>
+    <p>Model: {{classic_car.model}}</p>
+    <p>Premium: R{{policy.monthly_premium}} p/m</p>
+    <a
+      class="btn {% if not policy.active %}all-button-active{% else %}all-button{% endif %}"
+      href="/all-policies/{{policy.policy_number}}"
+      >View More</a
+    >
+  </div>
+  {% endfor %}
+</div>
+{% endblock %}
