--- a/templates/base.html
+++ b/templates/base.html
@@ -48,15 +48,20 @@
 
       .flash-container {
         font-family: sans-serif;
+        font-weight: bold;
         z-index: 1; /* set higher z-index value */
         position: relative; /* position must be set for z-index to work */
+      }
+      .flash-message {
+        margin: 0;
+        padding-top: 10px;
+        padding-bottom: 10px;
       }
       .flashes {
         display: flex;
         justify-content: space-around;
-        background-color: orange;
         max-width: 200px;
-        border-radius: 3%;
+        border-radius: 10px;
         margin: 5px;
         padding: 5px;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -101,7 +106,7 @@
                 {%
                 if
                 not
-                user
+                lg_user
                 %}
                 hidden{%
                 endif
@@ -127,7 +132,7 @@
             {%
             if
             not
-            user
+            lg_user
             %}
             hidden{%
             endif
@@ -140,7 +145,7 @@
             href="/register"
             {%
             if
-            user
+            lg_user
             %}
             hidden{%
             endif
@@ -153,7 +158,7 @@
             href="/login"
             {%
             if
-            user
+            lg_user
             %}
             hidden{%
             endif
@@ -168,9 +173,8 @@
     <div class="flash-container">
       {% with messages = get_flashed_messages() %} {% if messages %} {% for
       message in messages %}
-      <div class="flashes">
-        <p>{{ message }}</p>
-        <p class="flask-x">x</p>
+      <div class="flashes alert alert-info" role="alert">
+        <p class="flash-message">{{ message }}</p>
       </div>
       {% endfor %} {% endif %} {% endwith %}
     </div>
