--- a/templates/account.html
+++ b/templates/account.html
@@ -1,165 +1,142 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <style>
-      .button {
-        margin: 10px;
-        background: #333e48;
-        color: #ffffff;
-      }
-      .button:hover {
-        background-color: #0076be;
-        color: #ffffff;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Account</h1>
-    <p>ID Number: {{user.ID}}</p>
-    <p>Full name: {{user.name}} {{user.surname}}</p>
-    <p>Email: {{user.email}}</p>
-    <p>Cell Number: {{user.cell_no}}</p>
-    <button
-      class="btn button"
-      data-bs-toggle="modal"
-      data-bs-target="#EmailModal"
-    >
-      Update Email
-    </button>
-    <button
-      class="btn button"
-      data-bs-toggle="modal"
-      data-bs-target="#ContactModal"
-    >
-      Update Contact Number
-    </button>
-    <button
-      class="btn button"
-      data-bs-toggle="modal"
-      data-bs-target="#PasswordModal"
-    >
-      Update password
-    </button>
+{% extends 'base.html' %} {% block style %}
+<style>
+  .button {
+    margin: 10px;
+    background: #333e48;
+    color: #ffffff;
+  }
+  .button:hover {
+    background-color: #0076be;
+    color: #ffffff;
+  }
+</style>
+{% endblock %} {% block body%}
+<h1>Account</h1>
+<p>ID Number: {{user.ID}}</p>
+<p>Full name: {{user.name}} {{user.surname}}</p>
+<p>Email: {{user.email}}</p>
+<p>Cell Number: {{user.cell_no}}</p>
+<button class="btn button" data-bs-toggle="modal" data-bs-target="#EmailModal">
+  Update Email
+</button>
+<button
+  class="btn button"
+  data-bs-toggle="modal"
+  data-bs-target="#ContactModal"
+>
+  Update Contact Number
+</button>
+<button
+  class="btn button"
+  data-bs-toggle="modal"
+  data-bs-target="#PasswordModal"
+>
+  Update password
+</button>
 
-    <!-- Email Model -->
-    <div
-      class="modal fade"
-      id="EmailModal"
-      tabindex="-1"
-      aria-labelledby="EmailModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="EmailModalLabel">Change Email</h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-
-          <form action="" method="POST">
-            <div class="modal-body">
-              {{ email_form.hidden_tag() }} {{email_form.email.label}}
-              {{email_form.email()}}
-            </div>
-
-            <div class="modal-footer">{{email_form.submit()}}</div>
-          </form>
-        </div>
+<!-- Email Model -->
+<div
+  class="modal fade"
+  id="EmailModal"
+  tabindex="-1"
+  aria-labelledby="EmailModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="EmailModalLabel">Change Email</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
-    </div>
 
-    <!-- Contact Model -->
-    <div
-      class="modal fade"
-      id="ContactModal"
-      tabindex="-1"
-      aria-labelledby="ContactModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="ContactModalLabel">
-              Change Contact Number
-            </h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-
-          <form action="" method="POST">
-            <div class="modal-body">
-              {{ contact_form.hidden_tag() }} {{contact_form.cont_num.label}}
-              {{contact_form.cont_num()}}
-            </div>
-
-            <div class="modal-footer">{{contact_form.submit()}}</div>
-          </form>
+      <form action="" method="POST">
+        <div class="modal-body">
+          {{ email_form.hidden_tag() }} {{email_form.email.label}}
+          {{email_form.email()}}
         </div>
-      </div>
+
+        <div class="modal-footer">{{email_form.submit()}}</div>
+      </form>
     </div>
+  </div>
+</div>
 
-    <!-- Password Model -->
-    <div
-      class="modal fade"
-      id="PasswordModal"
-      tabindex="-1"
-      aria-labelledby="PasswordModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="PasswordModalLabel">
-              Change Password
-            </h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
+<!-- Contact Model -->
+<div
+  class="modal fade"
+  id="ContactModal"
+  tabindex="-1"
+  aria-labelledby="ContactModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="ContactModalLabel">
+          Change Contact Number
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
 
-          <form action="" method="POST">
-            <div class="modal-body">
-              {% if password_form.password.errors %} {% for error in
-              password_form.password.errors %}
-              <div style="color: red">{{error}}</div>
-              {% endfor %} {% endif %}<br />
-              {{ password_form.hidden_tag() }} {{password_form.password.label}}
-              {{password_form.password()}}<br />
-              {{password_form.new_password.label}}
-              {{password_form.new_password()}}
-            </div>
-
-            <div class="modal-footer">{{password_form.submit()}}</div>
-          </form>
+      <form action="" method="POST">
+        <div class="modal-body">
+          {{ contact_form.hidden_tag() }} {{contact_form.cont_num.label}}
+          {{contact_form.cont_num()}}
         </div>
-      </div>
-    </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+        <div class="modal-footer">{{contact_form.submit()}}</div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Password Model -->
+<div
+  class="modal fade"
+  id="PasswordModal"
+  tabindex="-1"
+  aria-labelledby="PasswordModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="PasswordModalLabel">
+          Change Password
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <form action="" method="POST">
+        <div class="modal-body">
+          {% if password_form.password.errors %} {% for error in
+          password_form.password.errors %}
+          <div style="color: red">{{error}}</div>
+          {% endfor %} {% endif %}<br />
+          {{ password_form.hidden_tag() }} {{password_form.password.label}}
+          {{password_form.password()}}<br />
+          {{password_form.new_password.label}} {{password_form.new_password()}}
+        </div>
+
+        <div class="modal-footer">{{password_form.submit()}}</div>
+      </form>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
