--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-
-  <body>
-    <h1>Registration</h1>
-    <form action="" method="POST">
-      <!-- hidden input field -->
-      {{form.hidden_tag()}} {% if form.user_id.errors %} {% for error in
-      form.user_id.errors %}
-      <div style="color: red">{{error}}</div>
-      {% endfor %} {% endif %} <br />
-      {{form.user_id.label}}: {{form.user_id(placeholder="username")}} <br />
-      {{form.name.label}}: {{form.name(placeholder="username")}} <br />
-      {{form.surname.label}}: {{form.surname(placeholder="username")}} <br />
-      {{form.email.label}}: {{form.email(placeholder="username")}} <br />
-      {{form.cell_no.label}}: {{form.cell_no(placeholder="username")}} <br />
-      {{form.password.label}}: {{form.password()}} <br />
-      {{form.submit}}<br />
-    </form>
-  </body>
-</html>
+{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
+<h1>Registration</h1>
+<form action="" method="POST">
+  <!-- hidden input field -->
+  {{form.hidden_tag()}} {% if form.user_id.errors %} {% for error in
+  form.user_id.errors %}
+  <div style="color: red">{{error}}</div>
+  {% endfor %} {% endif %} <br />
+  {{form.user_id.label}}: {{form.user_id(placeholder="username")}} <br />
+  {{form.name.label}}: {{form.name(placeholder="username")}} <br />
+  {{form.surname.label}}: {{form.surname(placeholder="username")}} <br />
+  {{form.email.label}}: {{form.email(placeholder="username")}} <br />
+  {{form.cell_no.label}}: {{form.cell_no(placeholder="username")}} <br />
+  {{form.password.label}}: {{form.password()}} <br />
+  {{form.submit}}<br />
+</form>
+{% endblock %}
