--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,176 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <style>
-      .nav-tag {
-        color: #ffffff;
-      }
-      .nav-tag:hover {
-        color: #111820;
-      }
+{% extends 'base.html' %} {% block style %}
+<style>
+  .dashboard-heading {
+    color: #111820;
+  }
+  .dashboard-card {
+    margin-top: 30px;
+    padding: 10px;
+    display: block;
+    width: 90%;
+    min-width: 300px;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+  .dashboard-buttons-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-around;
+    justify-items: center;
+  }
+  .dashboard-button {
+    width: 100px;
+    height: 80px;
+    background-color: #333e48;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7%;
+    margin: 5px;
+  }
+  .dashboard-button:hover {
+    background-color: #0076be;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  .dashboard-button-item {
+    text-decoration: none;
+    text-align: center;
+    color: #ffffff;
+    margin: 2px;
+  }
+  .dashboard-button-text {
+    margin: 0px;
+  }
 
-      .nav {
-        background-color: #0076be;
-      }
-      .nav-account {
-        color: #ffffff;
-        width: 20px;
-      }
-      .nav-account:hover {
-        color: #111820;
-      }
-      .body {
-        background-color: #ffffff;
-      }
-      .dashboard-heading {
-        color: #111820;
-      }
-      .dashboard-card {
-        margin-top: 30px;
-        padding: 10px;
-        display: block;
-        width: 90%;
-        min-width: 300px;
-        max-width: 1100px;
-        margin-left: auto;
-        margin-right: auto;
-        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-      }
-      .dashboard-buttons-group {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-content: space-around;
-        justify-items: center;
-      }
-      .dashboard-button {
-        width: 100px;
-        height: 80px;
-        background-color: #333e48;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 7%;
-        margin: 5px;
-      }
-      .dashboard-button:hover {
-        background-color: #0076be;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      }
-      .dashboard-button-item {
-        text-decoration: none;
-        text-align: center;
-        color: #ffffff;
-        margin: 2px;
-      }
-      .dashboard-button-text {
-        margin: 0px;
-      }
+  @media (min-width: 768px) {
+    .dashboard-card {
+      width: 80%;
+    }
+    .dashboard-buttons-group {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+  }
+</style>
+{% endblock %} {% block body%}
+<div class="card dashboard-card">
+  <h2 class="dashboard-heading">Welcome {{user.name}} {{user.surname}}</h2>
 
-      @media (min-width: 768px) {
-        .dashboard-card {
-          width: 80%;
-        }
-        .dashboard-buttons-group {
-          display: flex;
-          justify-content: space-around;
-          flex-wrap: wrap;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg nav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Platinum Plus</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link nav-tag" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link nav-tag" href="/dashboard">Dashboard</a>
-            </li>
-          </ul>
-
-          <a class="nav-account" href="/account">
-            <i class="fa-solid fa-circle-user fa-xl"></i>
-          </a>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Body  -->
-    <div class="card dashboard-card">
-      <h2 class="dashboard-heading">Welcome {{user.name}} {{user.surname}}</h2>
-
-      <div class="card-body dashboard-buttons-group">
-        <div class="dashboard-button">
-          <a class="dashboard-button-item" href="/all-policies/">
-            <i class="fa-regular fa-folder-open"></i>
-            <p class="dashboard-button-text">All Policies</p>
-          </a>
-        </div>
-        <div class="dashboard-button">
-          <a class="dashboard-button-item" href="/quote/classic-cars">
-            <i class="fa-solid fa-file-signature"></i>
-            <p class="dashboard-button-text">Classic Cars Quote</p>
-          </a>
-        </div>
-        <div class="dashboard-button">
-          <a class="dashboard-button-item" href="/quote/all-quotes">
-            <i class="fa-solid fa-file-contract"></i>
-            <p class="dashboard-button-text">All Quotes</p>
-          </a>
-        </div>
-        <div class="dashboard-button">
-          <a class="dashboard-button-item" href="/new-claim">
-            <i class="fa-solid fa-file-contract"></i>
-            <p class="dashboard-button-text">New Claim</p>
-          </a>
-        </div>
-        <div class="dashboard-button">
-          <a class="dashboard-button-item" href="/all-claims">
-            <i class="fa-solid fa-file-contract"></i>
-            <p class="dashboard-button-text">All Claims</p>
-          </a>
-        </div>
-        <!-- <a href="/account"> -->
-        <!-- <i class="fa-solid fa-circle-user"></i> -->
-        <!-- <p>Account</p> -->
-        <!-- </a> -->
-      </div>
+  <div class="card-body dashboard-buttons-group">
+    <div class="dashboard-button">
+      <a class="dashboard-button-item" href="/all-policies/">
+        <i class="fa-regular fa-folder-open"></i>
+        <p class="dashboard-button-text">All Policies</p>
+      </a>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    <div class="dashboard-button">
+      <a class="dashboard-button-item" href="/quote/classic-cars">
+        <i class="fa-solid fa-file-signature"></i>
+        <p class="dashboard-button-text">Classic Cars Quote</p>
+      </a>
+    </div>
+    <div class="dashboard-button">
+      <a class="dashboard-button-item" href="/quote/all-quotes">
+        <i class="fa-solid fa-file-contract"></i>
+        <p class="dashboard-button-text">All Quotes</p>
+      </a>
+    </div>
+    <div class="dashboard-button">
+      <a class="dashboard-button-item" href="/new-claim">
+        <i class="fa-solid fa-file-contract"></i>
+        <p class="dashboard-button-text">New Claim</p>
+      </a>
+    </div>
+    <div class="dashboard-button">
+      <a class="dashboard-button-item" href="/all-claims">
+        <i class="fa-solid fa-file-contract"></i>
+        <p class="dashboard-button-text">All Claims</p>
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
