--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-
-  <body>
-    <h1>Login</h1>
-    <form action="" method="POST">
-      {{ form.hidden_tag() }} {% if form.ID.errors %} {% for error in
-      form.ID.errors %}
-      <div style="color: red">{{error}}</div>
-      {% endfor %} {% endif %} {% if form.password.errors %} {% for error in
-      form.password.errors %}
-      <div style="color: red">{{error}}</div>
-      {% endfor %} {% endif %} {{form.ID.label}}:
-      {{form.ID(placeholder="username")}} <br />
-      {{form.password.label}}: {{form.password()}} <br />
-      {{form.submit}}<br />
-    </form>
-  </body>
-</html>
+{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
+<h1>Login</h1>
+<form action="" method="POST">
+  {{ form.hidden_tag() }} {% if form.ID.errors %} {% for error in form.ID.errors
+  %}
+  <div style="color: red">{{error}}</div>
+  {% endfor %} {% endif %} {% if form.password.errors %} {% for error in
+  form.password.errors %}
+  <div style="color: red">{{error}}</div>
+  {% endfor %} {% endif %} {{form.ID.label}}:
+  {{form.ID(placeholder="username")}} <br />
+  {{form.password.label}}: {{form.password()}} <br />
+  {{form.submit}}<br />
+</form>
+{% endblock %}
