change register link

--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
           </a>
           <a
             class="btn btn-success my-2 my-sm-0 nav-right-item"
-            href="/register"
+            href="/registration"
             {%
             if
             lg_user
