--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block body%}
 
-<h1>Hello World</h1>
+<h1>Platinum Plus </h1>
 <p>
   Definition of Luxury Item: A luxury item is not necessary to live, but it is
   deemed highly desirable within a culture or society. It tends to be sensitive
