changed back url

--- a/templates/policy.html
+++ b/templates/policy.html
@@ -38,6 +38,6 @@
     />
     <button type="submit">End Policy</button>
   </form>
-  <a href="/all-polices">back</a>
+  <a href="/all-policies/">back</a>
 </div>
 {% endblock %}
