--- a/templates/login.html
+++ b/templates/login.html
@@ -38,33 +38,56 @@
     color: #ffffff;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
+  .input-form-group{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .quote-form-container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media (min-width: 768px) {
+    .quote-form-container {
+      width: 92%;
+    }
+  }
+  @media (min-width: 768px) {
+    .quote-form-container {
+      width: 60%;
+    }
+  }
 </style> 
 {% endblock %} 
 {% block body%}
-<h1 class="all-heading">Login</h1>
-<form class="form-container" action="" method="POST">
-  {{ form.hidden_tag() }} 
-  {% if form.ID.errors %} 
-  {% for error in form.ID.errors %}
-    <div class="error-message error-color">{{error}}</div>
-  {% endfor %} 
-  {% endif %} 
-  {% if form.password.errors %} 
-  {% for error in form.password.errors %}
-    <div class="error-message error-color">{{error}}</div>
-  {% endfor %} 
-  {% endif %} 
-  
-  <div class="form-group">
-    {{form.ID.label}}:
-    <br />
-    {{form.ID(class='input-width', placeholder="")}} 
-  </div>
-  <div class="form-group">
-    {{form.password.label}}: 
-    <br />
-    {{form.password(class='input-width')}} 
-  </div>
-  {{form.submit(class='btn form-button')}}
-</form>
+<div class="quote-form-container">
+  <h1 class="all-heading">Login</h1>
+  <form class="card form-container" action="" method="POST">
+    
+    
+    <div class="form-group input-form-group">
+      {{ form.hidden_tag() }} 
+      {% if form.ID.errors %} 
+      {% for error in form.ID.errors %}
+        <div class="error-color input-form-group">{{error}}</div>
+      {% endfor %} 
+      {% endif %} 
+      {% if form.password.errors %} 
+      {% for error in form.password.errors %}
+        <div class=" error-color input-form-group">{{error}}</div>
+      {% endfor %} 
+      {% endif %} 
+      
+      {{form.ID.label}}:
+      <br />
+      {{form.ID(class='input-width', placeholder="")}} 
+    </div>
+    <div class="form-group input-form-group">
+      {{form.password.label}}: 
+      <br />
+      {{form.password(class='input-width')}} 
+    </div>
+    {{form.submit(class='btn form-button')}}
+  </form>
+</div>
 {% endblock %}
