form name change css

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 
 {% block body%}
-<div class="quote-form-container">
+<div class="login-sign-up-form-container">
 
   <h1 class="all-heading">Registration</h1>
   <form class="card form-container" action="" method="POST">
